--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         type: 'content', 
         layout: 'text-only', 
         text: `
-          <p class="mb-4 text-2xl font-bold text-gray-800">-----</p>
+          <p class="mb-4 text-2xl font-bold text-gray-800">Mon chez moi</p>
         `
       }, 
       
