modifition taille texte

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <script>
     // --- Simulation des données ---
     const albumData = [
-      { type: 'cover', title: 'Six mois en Calédonie', subtitle: 'Il est temps de reprendre la route', media: null }, 
+      { type: 'cover', title: 'Six mois en Calédonie', subtitle: 'Il est temps de bientôt reprendre la route', media: null }, 
       { 
         type: 'content', 
         layout: 'text-only', 
