--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     // --- Données de l'album (ORIGINALES) ---
     const albumData = [
       // 1. COUVERTURE - Titre mis à jour
-      { type: 'cover', title: 'NC : Le Bleu est une Promesse', subtitle: 'Six mois sous le soleil du Pacifique', media: { url: 'images/imageNC.png', caption: 'Souvenirs NC' } }, 
+      { type: 'cover', title: 'Six mois en Calédonie', subtitle: 'Il est temps de reprendre la route', media: { url: 'images/imagesNC_resultat.webp', caption: 'Souvenirs NC' } }, 
       
       // 2. PAGE D'INDEX (NOUVELLE PAGE)
       { type: 'index', layout: 'index', title: 'Index du Voyage' },
@@ -380,6 +380,7 @@
       }, 
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail.webp', caption: 'Bourail : la Roche Percée' } ] }, 
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail1.webp', caption: 'Bourail' } ] }, 
+      { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail8.webp', caption: 'Bourail' } ] }, 
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail2.webp', caption: 'Plage des tortues' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail3.webp', caption: 'Bourail' } ] },  
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail4.webp', caption: 'Bourail' } ] },       
