add images bourail

--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail.webp', caption: 'Bourail : la Roche Percée' } ] }, 
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail1.webp', caption: 'Bourail' } ] }, 
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail2.webp', caption: 'Plage des tortues' } ] },
+      { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail8.webp', caption: 'Bourail' } ] }, 
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail3.webp', caption: 'Bourail' } ] },  
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail4.webp', caption: 'Bourail' } ] },       
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail5.webp', caption: 'Bourail' } ] },
