essai rreion soll vertil

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
   </div>
 
   <div class="max-w-7xl mx-auto py-8">
-    <h1 class="text-4xl sm:text-5xl font-extrabold text-gray-800 text-center mb-10 tracking-wider">
+    <!-- <h1 class="text-4xl sm:text-5xl font-extrabold text-gray-800 text-center mb-10 tracking-wider">
         Carte Postale
-    </h1>
+    </h1> -->
 
     <div class="flip-book-container">
       <div id="monAlbum" class="rounded-lg shadow-2xl"></div>
@@ -301,7 +301,7 @@
           type: 'content',
           layout: 'portrait',
           media: [
-              { url: 'images/bananes.webp', caption: 'Image : Le petit paradis, vue du jardin.' }
+              { url: 'images/bananes.webp', caption: 'Le petit paradis, vue du jardin.' }
           ]
       },
       { 
