--- a/index.html
+++ b/index.html
@@ -403,6 +403,20 @@
       { type: 'content', layout: 'portrait', media: [ { url: 'images/montagne7.webp', caption: 'Sur les hauteurs' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/montagne8.webp', caption: 'Sur les hauteurs' } ] },     
       { type: 'content', layout: 'portrait', media: [ { url: 'images/montagne9.webp', caption: 'Sur les hauteurs' } ] }, 
+      { 
+        type: 'content', 
+        layout: 'text-only', 
+        text: `
+          <p class="text-lg sm:text-xl md:text-2xl font-bold text-gray-800">Le bleu du Lagon</p>        `
+      },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/poe1.webp', caption: 'Le Bleu' } ] },
+        { type: 'content', layout: 'portrait', media: [ { url: 'images/poe.webp', caption: 'Le Bleu' } ] },
+        { type: 'content', layout: 'portrait', media: [ { url: 'images/poe3.webp', caption: 'Le Bleu' } ] },
+        { type: 'content', layout: 'portrait', media: [ { url: 'images/po5.webp', caption: 'Le Bleu' } ] },
+        { type: 'content', layout: 'portrait', media: [ { url: 'images/poe7.webp', caption: 'Le Bleu' } ] },
+        { type: 'content', layout: 'portrait', media: [ { url: 'images/poe2.webp', caption: 'Le Bleu' } ] },
+        { type: 'content', layout: 'portrait', media: [ { url: 'images/poe4.webp', caption: 'Le Bleu' } ] },
+        { type: 'content', layout: 'portrait', media: [ { url: 'images/poe6.webp', caption: 'Le Bleu' } ] },
        { 
         type: 'content', 
         layout: 'text-only', 
