--- a/index.html
+++ b/index.html
@@ -345,12 +345,15 @@
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea3.webp', caption: 'Vue panoramique' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea5.webp', caption: 'Promenade matinale' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea7.webp', caption: 'Détente au bord de l\'eau' } ] },
-      { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea11.webp', caption: 'Coucher de soleil' } ] },
+      { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea11.webp', caption: 'Amarage ou échouage?' } ] },
+      { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea14.webp', caption: 'Vue de l\'eau' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea13.webp', caption: 'Architecture locale' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea2.webp', caption: 'Ciel bleu' } ] },
+           { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea15.webp', caption: 'Petit cLin d\'oeil' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea4.webp', caption: 'Plage du Kuendu' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noume6.webp', caption: 'Les iles' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea8.webp', caption: 'Le grand bleu' } ] },
+      { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea16.webp', caption: 'La lumière du Pacifique' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/numea10.webp', caption: 'Les îles au loin' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea12.webp', caption: 'Sur la plage' } ] },
       
@@ -411,11 +414,11 @@
       },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/poe1.webp', caption: 'Le Bleu' } ] },
         { type: 'content', layout: 'portrait', media: [ { url: 'images/poe.webp', caption: 'Le Bleu' } ] },
-        { type: 'content', layout: 'portrait', media: [ { url: 'images/poe3.webp', caption: 'Le Bleu' } ] },
-        { type: 'content', layout: 'portrait', media: [ { url: 'images/po5.webp', caption: 'Le Bleu' } ] },
-        { type: 'content', layout: 'portrait', media: [ { url: 'images/poe7.webp', caption: 'Le Bleu' } ] },
+        { type: 'content', layout: 'portrait', media: [ { url: 'images/poe3.webp', caption: 'Promenade matinale sur le sable blanc.' } ] },
+        { type: 'content', layout: 'portrait', media: [ { url: 'images/po5.webp', caption: 'l’étendue turquoise.' } ] },
+        { type: 'content', layout: 'portrait', media: [ { url: 'images/poe7.webp', caption: 'Au loin, la barrière de corail.' } ] },
         { type: 'content', layout: 'portrait', media: [ { url: 'images/poe2.webp', caption: 'Le Bleu' } ] },
-        { type: 'content', layout: 'portrait', media: [ { url: 'images/poe4.webp', caption: 'Le Bleu' } ] },
+        { type: 'content', layout: 'portrait', media: [ { url: 'images/poe4.webp', caption: 'Détente et ombre sous les filaos.' } ] },
         { type: 'content', layout: 'portrait', media: [ { url: 'images/poe6.webp', caption: 'Le Bleu' } ] },
        { 
         type: 'content', 
