--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         type: 'content', 
         layout: 'text-only', 
         text: `
-          <p class="text-lg sm:text-xl md:text-2xl font-bold text-gray-800">Sur le Pafique</p>        `
+          <p class="text-lg sm:text-xl md:text-2xl font-bold text-gray-800">Sur le Pacifique !!!</p>        `
       },
        { 
         type: 'content', 
