--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bea_boat.webp', caption: 'Capt\'tain Béa...' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/boat1.webp', caption: 'En mer' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/boat6.webp', caption: 'En mer' } ] },
+      { type: 'content', layout: 'portrait', media: [ { url: 'images/boat_noum2.jpeg', caption: 'En mer' } ] },
        {
         type: 'content',
         layout: 'video',
@@ -452,24 +453,30 @@
        { type: 'content', layout: 'portrait', media: [ { url: 'images/boat7.webp', caption: 'En mer' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/boat4.webp', caption: 'En mer' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/boat.webp', caption: 'En mer' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/boat_noum.jpg', caption: 'En mer' } ] },
+        { type: 'content', layout: 'portrait', media: [ { url: 'images/boat_noum1.jpg', caption: 'En mer' } ] },
       
         { 
         type: 'content', 
         layout: 'text-only', 
         text: `
-          <p class="text-lg sm:text-xl md:text-2xl font-bold text-gray-800"></p>        `
+          <p class="text-lg sm:text-xl md:text-2xl font-bold text-gray-800">Ca se passe comme ça sous les Tropiques</p>        `
       },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops.jpeg', caption: 'EEn WE' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops1.jpeg', caption: 'EEn WE' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops2.jpeg', caption: 'EEn WE' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops3.jpg', caption: 'EEn WE' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops4.jpeg', caption: 'EEn WE' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops5.jpeg', caption: 'EEn WE' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops6.jpeg', caption: 'EEn WE' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops8.webp', caption: 'EEn WE' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops9.webp', caption: 'EEn WE' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops10.webp', caption: 'EEn WE' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops11.webp', caption: 'EEn WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops.jpeg', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops1.jpeg', caption: 'Mess & Collegues ' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops2.jpeg', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops3.jpg', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops4.jpeg', caption: 'La team Niaoulis' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops5.jpeg', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops6.jpeg', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops8.webp', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops9.webp', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops10.webp', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops11.webp', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops12.jpg', caption: 'P\'titcours de cuisine' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops13.webp', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops15.webp', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops7.jpg', caption: 'En WE' } ] },
 
       
        { 
