--- a/index.html
+++ b/index.html
@@ -472,6 +472,7 @@
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops8.webp', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops9.webp', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops10.webp', caption: 'En WE' } ] },
+           { type: 'content', layout: 'portrait', media: [ { url: 'images/cops16.jpeg', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops11.webp', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops12.jpg', caption: 'P\'titcours de cuisine' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops13.webp', caption: 'En WE' } ] },
