--- a/index.html
+++ b/index.html
@@ -349,9 +349,11 @@
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea14.webp', caption: 'Vue de l\'eau' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea13.webp', caption: 'Architecture locale' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea2.webp', caption: 'Ciel bleu' } ] },
+      { type: 'content', layout: 'portrait', media: [ { url: 'images/blindes.jpg', caption: 'quelques traces d\'un passé agité' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea15.webp', caption: 'Petit cLin d\'oeil' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea4.webp', caption: 'Plage du Kuendu' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noume6.webp', caption: 'Les iles' } ] },
+      { type: 'content', layout: 'portrait', media: [ { url: 'images/panneau_shark.webp', caption: 'La méfiance est de mise' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea8.webp', caption: 'Le grand bleu' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/noumea16.webp', caption: 'La lumière du Pacifique' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/numea10.webp', caption: 'Les îles au loin' } ] },
@@ -386,7 +388,9 @@
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail1.webp', caption: 'Bourail' } ] }, 
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail2.webp', caption: 'Plage des tortues' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail8.webp', caption: 'Bourail' } ] }, 
-      { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail3.webp', caption: 'Bourail' } ] },  
+      { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail3.webp', caption: 'Bourail' } ] },
+      { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail_sculpure.jpg', caption: 'Tarii de la terre.' } ] },
+            { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail_totem.jpg', caption: 'L\'appel du lagon' } ] },   
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail4.webp', caption: 'Bourail' } ] },       
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail5.webp', caption: 'Bourail' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/bourail6.webp', caption: 'Bourail' } ] }, 
@@ -410,7 +414,7 @@
         type: 'content', 
         layout: 'text-only', 
         text: `
-          <p class="text-lg sm:text-xl md:text-2xl font-bold text-gray-800">Le bleu du Lagon</p>        `
+          <p class="text-lg sm:text-xl md:text-2xl font-bold text-gray-800">Le bleu du Lagon : Poé</p>        `
       },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/poe1.webp', caption: 'Le Bleu' } ] },
         { type: 'content', layout: 'portrait', media: [ { url: 'images/poe.webp', caption: 'Le Bleu' } ] },
@@ -418,6 +422,7 @@
         { type: 'content', layout: 'portrait', media: [ { url: 'images/po5.webp', caption: 'l’étendue turquoise.' } ] },
         { type: 'content', layout: 'portrait', media: [ { url: 'images/poe7.webp', caption: 'Au loin, la barrière de corail.' } ] },
         { type: 'content', layout: 'portrait', media: [ { url: 'images/poe2.webp', caption: 'Le Bleu' } ] },
+        { type: 'content', layout: 'portrait', media: [ { url: 'images/horses.jpg', caption: 'Ca n\'est pas que l\'océan' } ] },
         { type: 'content', layout: 'portrait', media: [ { url: 'images/poe4.webp', caption: 'Détente et ombre sous les filaos.' } ] },
         { type: 'content', layout: 'portrait', media: [ { url: 'images/poe6.webp', caption: 'Le Bleu' } ] },
          
@@ -469,8 +474,23 @@
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops4.jpeg', caption: 'La team Niaoulis' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops5.jpeg', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops6.jpeg', caption: 'En WE' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops8.webp', caption: 'En WE' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops9.webp', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/freddy-birthday.jpg', caption: 'Ca promet des retours difficiles' } ] },
+        {
+        type: 'content',
+        layout: 'video',
+        media: [
+          { url: 'videos/20251024_224549.mp4', caption: 'Une nuit étoilée' } 
+        ],
+      }, 
+      {
+        type: 'content',
+        layout: 'video',
+        media: [
+          { url: 'videos/20251008_175754.mp4', caption: 'Ballet de braises' } 
+        ],
+      }, 
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops8.webp', caption: 'Esprit d\'équipe' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops9.webp', caption: 'Merci pour café' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops10.webp', caption: 'En WE' } ] },
            { type: 'content', layout: 'portrait', media: [ { url: 'images/cops16.jpeg', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops11.webp', caption: 'En WE' } ] },
