add photos et nusion

--- a/index.html
+++ b/index.html
@@ -498,6 +498,8 @@
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops13.webp', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops15.webp', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops7.jpg', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/francesca.jpg', caption: '' } ] },
+    //    { type: 'content', layout: 'portrait', media: [ { url: 'images/groupes .jpg', caption: 'Pele Mêle' } ] }, 
 
       
        { 
@@ -508,7 +510,8 @@
       },
      
       { type: 'content', layout: 'portrait', media: [ { url: 'images/mon_camion.webp', caption: 'Comprenne qui pourra' } ] }, 
-      { type: 'cover', title: 'Bye la Province Sud', subtitle: 'To be continued...', media: null } 
+      { type: 'content', layout: 'portrait', media: [ { url: 'images/beurk.jpg', caption: 'Réponse !!!' } ] }, 
+      { type: 'cover', title: 'Bye la Province Sud', subtitle: 'En route...pour ailleurs!!!', media: null } 
     ];
     // --- FIN DES DONNÉES ORIGINALES ---
 
