--- a/index.html
+++ b/index.html
@@ -499,6 +499,7 @@
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops15.webp', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops7.jpg', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/francesca.jpg', caption: '' } ] },
+         { type: 'content', layout: 'portrait', media: [ { url: 'images/pelayala.jpg', caption: '' } ] },
     //    { type: 'content', layout: 'portrait', media: [ { url: 'images/groupes .jpg', caption: 'Pele Mêle' } ] }, 
 
       
