--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops7.jpg', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/francesca.jpg', caption: '' } ] },
          { type: 'content', layout: 'portrait', media: [ { url: 'images/pelayala.jpg', caption: '' } ] },
-    //    { type: 'content', layout: 'portrait', media: [ { url: 'images/groupes .jpg', caption: 'Pele Mêle' } ] }, 
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/collage.jpg', caption: 'Pele Mêle' } ] }, 
 
       
        { 
