--- a/index.html
+++ b/index.html
@@ -492,16 +492,16 @@
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops8.webp', caption: 'Esprit d\'équipe' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops9.webp', caption: 'Merci pour café' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops10.webp', caption: 'En WE' } ] },
-           { type: 'content', layout: 'portrait', media: [ { url: 'images/cops16.jpeg', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops16.jpeg', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops11.webp', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops12.jpg', caption: 'P\'titcours de cuisine' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops13.webp', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops15.webp', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops7.jpg', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/francesca.jpg', caption: '' } ] },
-         { type: 'content', layout: 'portrait', media: [ { url: 'images/pelayala.jpg', caption: '' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/pelayala.jpg', caption: '' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/mot_depart.jpg', caption: 'Ben elles avaient quoi mes chausures???' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/collage.jpg', caption: 'Pele Mêle' } ] }, 
-
       
        { 
         type: 'content', 
