--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
               `
       }, 
       { type: 'content', layout: 'portrait', media: [ { url: 'images/boat.webp', caption: 'Nouméa Sunrise' } ] },
-      { type: 'content', layout: 'portrait', media: [ { url: 'images/bea_boat.webp', caption: 'Capt\'tain Béa...' } ] },
+      { type: 'content', layout: 'portrait', media: [ { url: 'images/bea_boat.webp', caption: 'Cap\'tain Béa...' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/boat1.webp', caption: 'En mer' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/boat6.webp', caption: 'En mer' } ] },
       { type: 'content', layout: 'portrait', media: [ { url: 'images/boat_noum2.jpeg', caption: 'En mer' } ] },
@@ -467,7 +467,7 @@
         text: `
           <p class="text-lg sm:text-xl md:text-2xl font-bold text-gray-800">Ca se passe comme ça sous les Tropiques</p>        `
       },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops.jpeg', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops.jpeg', caption: 'Team Camping' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops1.jpeg', caption: 'Mess & Collegues ' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops2.jpeg', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops3.jpg', caption: 'En WE' } ] },
@@ -491,15 +491,15 @@
       }, 
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops8.webp', caption: 'Esprit d\'équipe' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops9.webp', caption: 'Merci pour café' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops10.webp', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops10.webp', caption: 'Team camping de Ouf' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops16.jpeg', caption: 'En WE' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops11.webp', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops11.webp', caption: 'Team Camping de Ouf' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops12.jpg', caption: 'P\'titcours de cuisine' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops13.webp', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops15.webp', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops7.jpg', caption: 'En WE' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/francesca.jpg', caption: '' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/pelayala.jpg', caption: '' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/francesca.jpg', caption: 'Merci d\'avoir démélé mon administratif' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/pelayala.jpg', caption: 'Quoi de mieux que bosser avec vous !!!' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/mot_depart.jpg', caption: 'Ben elles avaient quoi mes chausures???' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/collage.jpg', caption: 'Pele Mêle' } ] }, 
       
