--- a/index.html
+++ b/index.html
@@ -496,6 +496,7 @@
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops11.webp', caption: 'Team Camping de Ouf' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops12.jpg', caption: 'P\'titcours de cuisine' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops13.webp', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/dream_team.jpg', caption: 'La Dream Team' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops15.webp', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops7.jpg', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/francesca.jpg', caption: 'Merci d\'avoir démélé mon administratif' } ] },
