--- a/index.html
+++ b/index.html
@@ -468,12 +468,12 @@
           <p class="text-lg sm:text-xl md:text-2xl font-bold text-gray-800">Ca se passe comme ça sous les Tropiques</p>        `
       },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops.jpeg', caption: 'Team Camping' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops1.jpeg', caption: 'Mess & Collegues ' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops1.jpeg', caption: 'Mess & Collegues & amis' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops2.jpeg', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops3.jpg', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops4.jpeg', caption: 'La team Niaoulis' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops5.jpeg', caption: 'En WE' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops6.jpeg', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops5.jpeg', caption: 'La grande famille n\'est pas?' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops6.jpeg', caption: 'Merci Jean Phi. !!!'  } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/freddy-birthday.jpg', caption: 'Ca promet des retours difficiles' } ] },
         {
         type: 'content',
@@ -498,7 +498,7 @@
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops13.webp', caption: 'En WE' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/dream_team.jpg', caption: 'La Dream Team' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/cops15.webp', caption: 'En WE' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops7.jpg', caption: 'En WE' } ] },
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/cops7.jpg', caption: 'Chez Jean Phi' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/francesca.jpg', caption: 'Merci d\'avoir démélé mon administratif' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/pelayala.jpg', caption: 'Quoi de mieux que bosser avec vous !!!' } ] },
        { type: 'content', layout: 'portrait', media: [ { url: 'images/mot_depart.jpg', caption: 'Ben elles avaient quoi mes chausures???' } ] },
