--- a/index.html
+++ b/index.html
@@ -508,7 +508,17 @@
         type: 'content', 
         layout: 'text-only', 
         text: `
-          <p class="text-lg sm:text-xl md:text-2xl font-bold text-gray-800">To be continued...</p>        `
+          <p class="text-lg sm:text-xl md:text-2xl font-bold text-gray-800">A bientôt !!!</p> <span style="display:block; text-align:center;">
+        ✧ ✦ ✧<br>
+        💞<br>
+        ✧ ✦ ✧
+    </span>
+     <span style="display:block; text-align:center;">
+        ✧ ✦ ✧<br>
+        💞<br>
+        ✧ ✦ ✧
+    </span>
+            `
       },
      
       { type: 'content', layout: 'portrait', media: [ { url: 'images/mon_camion.webp', caption: 'Comprenne qui pourra' } ] }, 
