--- a/index.html
+++ b/index.html
@@ -372,12 +372,19 @@
        { type: 'content', layout: 'portrait', media: [ { url: 'images/prony4.webp', caption: 'Prony' } ] }, 
        { type: 'content', layout: 'portrait', media: [ { url: 'images/prony5.webp', caption: 'D\'un bagne' } ] }, 
        { type: 'content', layout: 'portrait', media: [ { url: 'images/prony6.webp', caption: 'à l\'autre' } ] }, 
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/prony.jpg', caption: 'Prony' } ] }, 
        { type: 'content', layout: 'portrait', media: [ { url: 'images/prony7.webp', caption: 'Prony' } ] }, 
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/prony8.webp', caption: 'Prony' } ] }, 
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/prony9.webp', caption: 'Prony' } ] },
+        {type: 'content', layout: 'portrait', media: [ { url: 'images/prony1.jpg', caption: 'Prony' } ] }, 
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/prony8.webp', caption: 'Prony' } ] },
+        {type: 'content', layout: 'portrait', media: [ { url: 'images/prony2.webp', caption: 'Prony' } ] },  
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/prony9.webp', caption: 'Prony' } ] }, {type: 'content', layout: 'portrait', media: [ { url: 'images/prony2.webp', caption: 'Prony' } ] },  
+        {type: 'content', layout: 'portrait', media: [ { url: 'images/prony3.jpg', caption: 'Prony' } ] },  
        { type: 'content', layout: 'portrait', media: [ { url: 'images/prony10.webp', caption: 'Prony : Sunset' } ] },
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/prony11.webp', caption: 'Prony' } ] }, 
-       { type: 'content', layout: 'portrait', media: [ { url: 'images/prony12.webp', caption: 'Prony' } ] }, 
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/prony11.webp', caption: 'Prony' } ] },
+        {type: 'content', layout: 'portrait', media: [ { url: 'images/prony4.jpg', caption: 'Prony' } ] },  
+       { type: 'content', layout: 'portrait', media: [ { url: 'images/prony12.webp', caption: 'Prony' } ] },
+        {type: 'content', layout: 'portrait', media: [ { url: 'images/prony5.jpg', caption: 'Prony' } ] },
+         {type: 'content', layout: 'portrait', media: [ { url: 'images/prony6S.jpg', caption: 'Prony' } ] },   
         { 
         type: 'content', 
         layout: 'text-only', 
